# f1_faq_engine

./: .gitignore  Dockerfile  README.md  app.css  app.py  ingest_data.py  pyproject.toml  rag_filters.py  rag_pipeline.py
data/: circuits.csv  f1_2025_last_race_results.csv
